# safestclaw

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: config.yaml
cosmicrain/: config.yaml  pyproject.toml  style-guide.md
cosmicrain/src/cosmicrain/: __init__.py  cli.py
cosmicrain/src/cosmicrain/core/: ai.py  config.py  images.py  publisher.py  scheduler.py  telegram_bot.py
cosmicrain/themes/default/: index.html  post.html  tag.html
cosmicrain/themes/default/static/: style.css
flatblog/: config.yaml  pyproject.toml  style-guide.md
flatblog/src/flatblog/: __init__.py  cli.py
flatblog/src/flatblog/core/: ai.py  builder.py  config.py  feeds.py  images.py  post.py  publisher.py  scheduler.py  style.py  telegram_bot.py
flatblog/themes/default/: index.html  post.html  tag.html
flatblog/themes/default/static/: style.css
src/safeclaw/: __init__.py  cli.py
src/safeclaw/actions/: blog.py  code.py  research.py
src/safeclaw/channels/: cli.py
src/safeclaw/core/: blog_scheduler.py  engine.py  llm_installer.py  nlu.py  parser.py  prompt_builder.py  research_sources.py  setup_wizard.py  writing_style.py
src/safestclaw/: __init__.py  __main__.py  cli.py
src/safestclaw/actions/: __init__.py  base.py  blog.py  briefing.py  calendar.py  code.py  crawl.py  email.py  files.py  news.py  reminder.py  research.py  shell.py  summarize.py  weather.py
src/safestclaw/channels/: __init__.py  base.py  cli.py  telegram.py  web.py
src/safestclaw/core/: __init__.py  ai_writer.py  analyzer.py  blog_publisher.py  blog_scheduler.py  chat_setup.py  connectivity.py  conversational.py  crawler.py  documents.py  engine.py  feeds.py  frontpage.py  i18n.py  llm_installer.py  mcp_server.py  memory.py  ml_fallback.py  nlp.py  nlu.py  notifications.py  parser.py  paths.py  prompt_builder.py  research_sources.py  scheduler.py  setup_wizard.py  sftp_browser.py  summarizer.py  tick_scheduler.py  vision.py  web_service.py  word_numbers.py  writing_style.py
src/safestclaw/plugins/: __init__.py  base.py  loader.py
src/safestclaw/plugins/community/: device_discovery.py  easter_eggs.py  piper_tts.py  social_monitor.py  whisper_stt.py
src/safestclaw/plugins/official/: fastmcp_server.py  security.py  smarthome.py
src/safestclaw/triggers/: __init__.py  webhook.py
tests/: test_ai_cascade_and_ml_fallback.py  test_autoblog_llm.py  test_blog_publish_features.py  test_calendar_and_mcp.py  test_chat_setup.py  test_connectivity.py  test_conversational_research.py  test_multilingual.py  test_security.py  test_security_plugin.py  test_security_plugin_integration.py  test_sftp_browser_and_template.py  test_sweep.py  test_template_offer.py  test_web_channel.py
